2.6.0
	- performance improvement: added AVX support for TimeStepDFSPH, DragForce_Gissler2017, Viscosity_Standard, Viscosity_Weiler2018, MicropolarModel_Bender2017
	- added AVX support for 2D simulations 
	- added VTk export of rigid bodies
	- added parameter to control min CFL step size
	- cleaned up classes of graphical user interface
	- exchanged Static/DynamicBoundarySimulator by SPHSimulator which can handle dynamic and static scenes
	- added regular surface sampling
	- updated to Eigen 3.3.7
	- bugfixes

2.5.0 
	- added the boundary handling method "Volume Maps: An Implicit Boundary Representation for SPH"
	- added the boundary handling method "Density Maps for Improved SPH Boundary Handling"
	- added regular particle sampling
	- PartioViewer can play sequences
	- PartioViewer can write sequences as jpg files
	- PartioViewer can generate movies using ffmpeg
	- PartioViewer can render rigid body data	
	- PartioViewer supports multiphase data
	- user can now save/load the complete state of the simulation 
	- bugfixes

2.4.0
	- added rigid body export
	- added VTK file export (enables the data import in ParaView)
	- added file dialog for Windows
	- added a Python plugin for Maya to model scenes in Maya and export them to SPlisHSPlasH
	- added animation fields to animate particles in an area using a math script
	- improved fluid emitters	
	- added option to simulate without GUI
	- added GPU neighborhood search (cuNSearch) which can be selected in CMake

2.3.0	
	- added the Implicit SPH Formulation for Incompressible Linearly Elastic Solids of Peer et al. 2017
	- added Corotated SPH for deformable solids of Becker et al. 2009
	- SPlisHSPlasH now supports 2D simulations
	- SPlisHSPlasH now has enhanced particle coloring
	- partio export of arbitrary particle attributes is now supported
	- renamed Static/DynamicBoundaryDemo to Static/DynamicBoundarySimulator
	- added documentation of file format
	- added colormaps
	- fixed race condition